# PrometheusMK3

./: CMakeLists.txt  README.md
CalibrationTool/: CMakeLists.txt  Main.cpp
GalaxyEngine/: CMakeLists.txt  GalaxyEngine.hpp  README.md
GalaxyEngine/Engine/: MacroKeywords.hpp  Runtime.cpp  Runtime.hpp
GalaxyEngine/Engine/Core/: AbstractChannel.cpp  AbstractChannel.hpp  AbstractExecutor.cpp  AbstractExecutor.hpp  AbstractPort.cpp  AbstractPort.hpp  AbstractProcessor.cpp  AbstractProcessor.hpp  AbstractWorkflow.cpp  AbstractWorkflow.hpp
GalaxyEngine/Engine/Core/Tools/: PortAccess.cpp  PortAccess.hpp  ProcessorAccess.cpp  ProcessorAccess.hpp  WorkflowAccess.cpp  WorkflowAccess.hpp
GalaxyEngine/Engine/Decorators/: DecoratorIf.hpp
GalaxyEngine/Engine/Executors/: ParallelExecutor.cpp  ParallelExecutor.hpp  RealtimeExecutor.cpp  RealtimeExecutor.hpp  SerialExecutor.cpp  SerialExecutor.hpp  WorkflowDeleterExecutor.cpp  WorkflowDeleterExecutor.hpp  WorkflowWaitingExecutor.cpp  WorkflowWaitingExecutor.hpp
GalaxyEngine/Engine/Processors/: AwakeAction.cpp  AwakeAction.hpp  EmptyProcessor.hpp  InitializeAction.cpp  InitializeAction.hpp  LambdaAction.cpp  LambdaAction.hpp  NotifyConditionAction.cpp  NotifyConditionAction.hpp  PassValueAction.hpp  SubmitWorkflowAction.hpp  SwapValueAction.hpp  WaitAction.cpp  WaitAction.hpp  WaitConditionAction.cpp  WaitConditionAction.hpp
GalaxyEngine/Framework/: Channel.hpp  Port.hpp  Processor.cpp  Processor.hpp  Workflow.cpp  Workflow.hpp
PrometheusSystem/: CMakeLists.txt  Controller.cpp  Controller.hpp  Launcher.cpp
PrometheusSystem/Modules/: CRCModule.cpp  CRCModule.hpp
PrometheusSystem/Processors/Condition/: ArmorMatcher.cpp  ArmorMatcher.hpp  ArmorRecommender.cpp  ArmorRecommender.hpp  LightBarsFilter.cpp  LightBarsFilter.hpp
PrometheusSystem/Processors/Debug/: GpuMatView.hpp  MatView.hpp  StopKeyWaiter.cpp  StopKeyWaiter.hpp
PrometheusSystem/Processors/Detection/: ContoursDetector.cpp  ContoursDetector.hpp
PrometheusSystem/Processors/Preprocess/: BayerBGToHSVConverter.hpp  CloseBlurProcessor.hpp  ColorFilter.cpp  ColorFilter.cu  ColorFilter.hpp  GaussBlurProcessor.hpp  OpenBlurProcessor.hpp  PictureCutter.cpp  PictureCutter.hpp
PrometheusSystem/Processors/Transimission/: GpuPictureDownloader.hpp  GpuPictureUploader.hpp  PictureAcquirer.cpp  PictureAcquirer.hpp  SerialCommand.cpp  SerialCommand.hpp  (+1 more)
PrometheusSystem/Workflows/: FrameworkFlow.hpp
